fix start screen v 4

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -53,7 +53,7 @@
 			</div>
 		</div>
 
-		<header class="app-header">Книга</header>
+		<header class="app-header hidden">Книга</header>
 		<main class="reader hidden" id="reader">
 			<div class="page" id="page-container"></div>
 			<button class="nav-btn left" id="prevBtn" aria-label="Назад"></button>
