--- a/webapp/index.html
+++ b/webapp/index.html
@@ -78,7 +78,7 @@
 			</div>
 		</div>
 	</div>
-	<script type="module" src="/assets/app.simple.js"></script>
+	<script type="module" src="/assets/app.epub.js"></script>
 </body>
 
 </html>
