--- a/webapp/index.html
+++ b/webapp/index.html
@@ -61,6 +61,8 @@
 		</main>
 		<footer class="app-footer hidden">
 			<div id="status"></div>
+			<button id="fontDec" class="font-btn">A−</button>
+			<button id="fontInc" class="font-btn">A+</button>
 			<button id="tocBtn" class="buy-btn" style="background:#0ea5e9">Оглавление</button>
 			<button id="buyBtn" class="buy-btn">Купить полную версию</button>
 		</footer>
