--- a/webapp/admin.html
+++ b/webapp/admin.html
@@ -21,7 +21,7 @@
 				<thead>
 					<tr>
 						<th>ID</th>
-						<th>User</th>
+						<th>User / Nick</th>
 						<th>Status</th>
 						<th>Действия</th>
 					</tr>
