feat(admin): show TG nick; allow user delete feat(paywall): demo mode first chapter only + paywall modal; create purchase request; public config for support username and price server: add create-request, public-config; list-requests joins username

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -80,6 +80,23 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- Paywall modal -->
+	<div id="paywall" class="toc hidden" role="dialog" aria-modal="true">
+		<div class="toc-inner">
+			<header class="toc-top">
+				<h2>Бесплатный фрагмент</h2>
+			</header>
+			<div class="toc-list">
+				<p>Бесплатный фрагмент закончился, а приключения героев только начинаются. Хочешь узнать, что будет дальше?</p>
+				<p><strong id="priceText">Купить за 555 ₽</strong></p>
+			</div>
+			<div class="toc-actions">
+				<button id="payBuy" class="onb-btn">Купить</button>
+				<button id="payClose" class="onb-btn" style="background:#374151">Закрыть</button>
+			</div>
+		</div>
+	</div>
 	<script type="module" src="/assets/app.epub.js"></script>
 </body>
 
