feat(ui): убрать кнопку покупки в футере, показать индикатор Демо/Полная; скрыть оглавление в демо; в демо всегда начинать с начала

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -64,7 +64,7 @@
 			<button id="fontDec" class="font-btn">A−</button>
 			<button id="fontInc" class="font-btn">A+</button>
 			<button id="tocBtn" class="buy-btn" style="background:#0ea5e9">Оглавление</button>
-			<button id="buyBtn" class="buy-btn">Купить полную версию</button>
+			<div id="accessLabel" class="access-label"> </div>
 		</footer>
 	</div>
 
