feat(ui): add footer toggle Tap/Swipe; implement swipe-only navigation when selected; persist setting

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -63,6 +63,10 @@
 			<div id="status"></div>
 			<button id="fontDec" class="font-btn">A−</button>
 			<button id="fontInc" class="font-btn">A+</button>
+			<div class="segmented" id="navModeCtl">
+				<button id="navModeTap" class="seg-btn">Тап</button>
+				<button id="navModeSwipe" class="seg-btn">Свайп</button>
+			</div>
 			<button id="tocBtn" class="buy-btn" style="background:#0ea5e9">Оглавление</button>
 			<div id="accessLabel" class="access-label"> </div>
 		</footer>
