--- a/webapp/index.html
+++ b/webapp/index.html
@@ -56,6 +56,7 @@
 		<header class="app-header hidden">Книга</header>
 		<main class="reader hidden" id="reader">
 			<div class="page" id="page-container"></div>
+			<div id="swipeOverlay" class="swipe-overlay"></div>
 			<button class="nav-btn left" id="prevBtn" aria-label="Назад"></button>
 			<button class="nav-btn right" id="nextBtn" aria-label="Вперед"></button>
 		</main>
