perf(load): defer vendor scripts in index; cache book.epub; add Netlify _headers for caching

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -99,6 +99,9 @@
 			</div>
 		</div>
 	</div>
+	<!-- Vendor scripts: грузим один раз и кэшируем долго -->
+	<script src="/assets/vendor/jszip.min.js" defer></script>
+	<script src="/assets/vendor/epub.min.js" defer></script>
 	<script type="module" src="/assets/app.epub.js"></script>
 </body>
 
