--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 	<title>TG Book</title>
 	<link rel="stylesheet" href="/assets/styles.css">
+	<link rel="preload" href="/assets/book.epub" as="fetch" crossorigin>
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 
