feat(demo): TOC limited up to chapter 5; show inline Buy button after closing modal; footer buy mirrors modal behavior

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,7 +3,8 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
+	<meta name="viewport"
+		content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
 	<title>TG Book</title>
 	<link rel="stylesheet" href="/assets/styles.css">
 	<link rel="preload" href="/assets/book.epub" as="fetch" crossorigin>
@@ -68,6 +69,7 @@
 
 			<button id="tocBtn" class="buy-btn" style="background:#0ea5e9">Оглавление</button>
 			<div id="accessLabel" class="access-label"> </div>
+			<button id="buyInline" class="buy-btn hidden">Купить полную версию</button>
 		</footer>
 	</div>
 
